--- a/apps/redmine/haproxy/haproxy.cfg
+++ b/apps/redmine/haproxy/haproxy.cfg
@@ -25,9 +25,9 @@ frontend myexporter
 
     default_backend dflt
 
-backend mysql
-    option mysql-check user haproxy
-    server my1 db:3306 check
+#backend mysql
+#    option mysql-check user haproxy
+#    server my1 db:3306 check
 
 backend myexporter
     option httpchk GET /metrics
